--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Developer & Game Tester Portfolio</title>
+    <title>Mystic's Portfolio</title>
     <style>
         * {
             margin: 0;
@@ -576,7 +576,7 @@
         <div class="hero-content">
             <h1>Mystic</h1>
             <div class="subtitle">Developer & Game Tester</div>
-            <p class="description">Building game mods, software solutions, and ensuring quality through playtesting</p>
+            <p class="description">Building game mods, software, and ensuring quality assurance through playtesting</p>
             <div class="cta-buttons">
                 <a href="#projects" class="btn btn-primary">View My Work</a>
                 <a href="#contact" class="btn btn-secondary">Get In Touch</a>
@@ -587,8 +587,8 @@
     <section id="about">
         <h2>About Me</h2>
         <div style="max-width: 800px; margin: 0 auto; text-align: center; color: #aaa; font-size: 1.2em; line-height: 1.8;">
-            <p>I'm a developer and game tester who creates custom mods, builds software solutions, and rigorously playtests games to ensure exceptional player experiences. My work spans from modifying existing games to developing standalone applications.</p>
-            <p style="margin-top: 20px;">With hands-on experience in both creation and quality assurance, I understand what makes software and games truly great from multiple angles.</p>
+            <p>I'm a developer and game tester who creates mods, builds software, and playtests games.</p>
+            <p style="margin-top: 20px;">Because I know some programmation and can understand code, as well as playtesting games, it makes me an all rounded asset to have.</p>
         </div>
     </section>
 
@@ -598,17 +598,17 @@
             <div class="skill-card">
                 <div class="skill-icon">🎮</div>
                 <h3>Game Testing</h3>
-                <p>Playtesting, Bug Identification, Gameplay Analysis, Balance Testing, Performance Analysis, Quality Assurance</p>
+                <p>Playtesting, Bug Finding, Gameplay Review, Balance Testing, Performance Testing, Quality Assurance</p>
             </div>
             <div class="skill-card">
                 <div class="skill-icon">🔧</div>
                 <h3>Mod Development</h3>
-                <p>Game Modding, Scripting, Custom Content Creation, Gameplay Enhancement, Mod Distribution, Community Support</p>
+                <p>Game Modding, Scripting, Custom Mod Creation, Gameplay Enhancement, Mod Distribution, Community Support</p>
             </div>
             <div class="skill-card">
                 <div class="skill-icon">💻</div>
                 <h3>Software Development</h3>
-                <p>Application Development, UI/UX Design, Problem Solving, Code Optimization, Version Control, Software Architecture</p>
+                <p>Application Development, Code Optimization, Software Architecture</p>
             </div>
         </div>
     </section>
@@ -633,22 +633,22 @@
             <div class="project-card">
                 <div class="project-image">🌐</div>
                 <div class="project-content">
-                    <h3>Interactive Web App</h3>
-                    <p>Modern responsive web application with real-time features and beautiful animations.</p>
+                    <h3>Kbo</h3>
+                    <p>Software that renders key pressed in direct time, compatible with OBS and streaming.</p>
                     <div class="tech-tags">
                         <span class="tech-tag">React</span>
                         <span class="tech-tag">Node.js</span>
                         <span class="tech-tag">MongoDB</span>
                     </div>
-                    <a href="https://github.com/yourusername" class="project-link">View on GitHub</a>
+                    <a href="https://github.com/mystic-HQ/Kbo" class="project-link">View on GitHub</a>
                 </div>
             </div>
 
             <div class="project-card">
                 <div class="project-image">🐛</div>
                 <div class="project-content">
-                    <h3>Bug Tracking System</h3>
-                    <p>Full-stack bug tracking and project management tool with team collaboration features.</p>
+                    <h3>Game Testing</h3>
+                    <p>Playtesting a game to give feedback, find bugs and improve performances</p>
                     <div class="tech-tags">
                         <span class="tech-tag">Express</span>
                         <span class="tech-tag">PostgreSQL</span>
