--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mystic Portfolio</title>
+<title>Mystic's Portfolio</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
@@ -31,34 +31,69 @@ animation:bgFlow 22s ease infinite;
 100%{background-position:0% 50%}
 }
 
-.grid-overlay{
+/* ===== NEBULA LAYERS ===== */
+.nebula{
 position:absolute;
+width:600px;
+height:600px;
+border-radius:50%;
+filter:blur(140px);
+opacity:.35;
+animation:nebulaFloat 40s ease-in-out infinite;
+}
+
+.nebula-1{
+background:#00ffff;
+top:10%;
+left:5%;
+animation-duration:45s;
+}
+
+.nebula-2{
+background:#ff00ff;
+bottom:10%;
+right:10%;
+animation-duration:50s;
+}
+
+.nebula-3{
+background:#6a5cff;
+top:50%;
+left:40%;
+animation-duration:55s;
+}
+
+@keyframes nebulaFloat{
+0%{transform:translate(0,0)}
+25%{transform:translate(120px,-80px)}
+50%{transform:translate(-100px,60px)}
+75%{transform:translate(80px,120px)}
+100%{transform:translate(0,0)}
+}
+
+/* ===== GRAIN (INLINE SVG, FREE) ===== */
+body::after{
+content:"";
+position:fixed;
 inset:0;
-background-image:
-linear-gradient(rgba(0,255,255,.05) 1px, transparent 1px),
-linear-gradient(90deg, rgba(0,255,255,.05) 1px, transparent 1px);
-background-size:90px 90px;
-animation:gridMove 35s linear infinite;
-opacity:.25;
+background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.8' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='120' height='120' filter='url(%23n)' opacity='.035'/%3E%3C/svg%3E");
+pointer-events:none;
+z-index:0;
 }
 
-@keyframes gridMove{
-from{background-position:0 0}
-to{background-position:500px 500px}
-}
-
+/* ===== PARTICLES ===== */
 .particles span{
 position:absolute;
 width:2px;height:2px;
-background:#00ffff;
-opacity:.6;
-animation:particleFloat linear infinite;
-will-change:transform;
+background:rgba(255,255,255,.7);
+border-radius:50%;
+opacity:.5;
+animation:particleDrift linear infinite;
 }
 
-@keyframes particleFloat{
-from{transform:translateY(110vh)}
-to{transform:translateY(-10vh)}
+@keyframes particleDrift{
+from{transform:translateY(120vh) translateX(0)}
+to{transform:translateY(-20vh) translateX(120px)}
 }
 
 /* ===== LANGUAGE BUTTON ===== */
@@ -104,26 +139,14 @@ background:linear-gradient(135deg,#00ffff,#ff00ff);
 -webkit-text-fill-color:transparent;
 }
 
-.nav-links{
-display:flex;
-gap:30px;
-}
-
-.nav-links a{
-color:#fff;
-text-decoration:none;
-position:relative;
-}
-
+.nav-links{display:flex;gap:30px}
+.nav-links a{color:#fff;text-decoration:none;position:relative}
 .nav-links a::after{
-content:"";
-position:absolute;
-bottom:-5px;left:0;
+content:"";position:absolute;bottom:-5px;left:0;
 width:0;height:2px;
 background:linear-gradient(90deg,#00ffff,#ff00ff);
 transition:.3s;
 }
-
 .nav-links a:hover::after{width:100%}
 
 /* ===== HERO ===== */
@@ -146,30 +169,13 @@ background-size:200%;
 animation:shimmer 3s linear infinite;
 }
 
-@keyframes shimmer{
-to{background-position:200%}
-}
+@keyframes shimmer{to{background-position:200%}}
 
-.subtitle{
-font-size:1.6em;
-color:#ccc;
-margin:20px 0;
-}
-
-.description{
-max-width:600px;
-margin:auto;
-color:#aaa;
-line-height:1.6;
-}
+.subtitle{font-size:1.6em;color:#ccc;margin:20px 0}
+.description{max-width:700px;margin:auto;color:#aaa;line-height:1.6}
 
 /* ===== SECTIONS ===== */
-section{
-padding:100px 20px;
-max-width:1400px;
-margin:auto;
-}
-
+section{padding:100px 20px;max-width:1400px;margin:auto}
 h2{
 text-align:center;
 font-size:2.8em;
@@ -185,16 +191,12 @@ display:grid;
 grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
 gap:30px;
 }
-
 .skill-card{
-padding:30px;
-border-radius:20px;
+padding:30px;border-radius:20px;
 background:rgba(255,255,255,.04);
 border:1px solid rgba(0,255,255,.2);
 transition:.4s;
-will-change:transform;
 }
-
 .skill-card:hover{
 transform:translateY(-8px);
 box-shadow:0 20px 50px rgba(0,255,255,.25);
@@ -207,7 +209,6 @@ justify-content:center;
 gap:20px;
 margin-bottom:40px;
 }
-
 .project-tabs button{
 padding:10px 26px;
 border-radius:30px;
@@ -217,7 +218,6 @@ color:#fff;
 cursor:pointer;
 transition:.3s;
 }
-
 .project-tabs button.active{
 background:linear-gradient(135deg,#00ffff,#ff00ff);
 color:#000;
@@ -235,13 +235,13 @@ border-radius:20px;
 background:rgba(255,255,255,.04);
 border:1px solid rgba(255,0,255,.3);
 transition:.4s;
-will-change:transform;
 }
-
 .project-card:hover{
 transform:translateY(-10px);
 box-shadow:0 20px 50px rgba(255,0,255,.3);
 }
+
+.project-card p{color:#aaa;margin-top:10px}
 
 .project-link{
 display:inline-block;
@@ -261,7 +261,6 @@ grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
 gap:30px;
 text-align:center;
 }
-
 .contact p{color:#aaa}
 .contact a{color:#00ffff;text-decoration:none}
 
@@ -276,8 +275,10 @@ text-align:center;
 <body>
 
 <div class="bg-animation">
-<div class="grid-overlay"></div>
-<div class="particles" id="particles"></div>
+  <div class="nebula nebula-1"></div>
+  <div class="nebula nebula-2"></div>
+  <div class="nebula nebula-3"></div>
+  <div class="particles" id="particles"></div>
 </div>
 
 <button class="lang-toggle" onclick="toggleLang()">FR</button>
@@ -332,14 +333,37 @@ My understanding of programming allows me to communicate efficiently with develo
 </div>
 
 <div class="projects-grid" id="testing">
-<div class="project-card"><h3>Playtesting Project #1</h3><a class="project-link" href="#">View</a></div>
-<div class="project-card"><h3>Playtesting Project #2</h3><a class="project-link" href="#">View</a></div>
-<div class="project-card"><h3>Playtesting Project #3</h3><a class="project-link" href="#">View</a></div>
+<div class="project-card">
+<h3>Playtesting Project #1</h3>
+<p>Multiplayer-focused testing with emphasis on balance, progression flow, and bug reproduction.</p>
+<a class="project-link" href="https://discord.gg/deepspiritgames">View</a>
+</div>
+
+<div class="project-card">
+<h3>Playtesting Project #2</h3>
+<p>Early-access testing providing structured reports on mechanics clarity and UX consistency.</p>
+<a class="project-link" href="https://discord.gg/ryfqDSYGMX">View</a>
+</div>
+
+<div class="project-card">
+<h3>Playtesting Project #3</h3>
+<p>Stress testing, performance benchmarking, and gameplay feedback during active development.</p>
+<a class="project-link" href="#">View</a>
+</div>
 </div>
 
 <div class="projects-grid" id="mods" style="display:none">
-<div class="project-card"><h3>Mod Project #1</h3><a class="project-link" href="https://github.com/mystic-HQ">GitHub</a></div>
-<div class="project-card"><h3>Mod Project #2</h3><a class="project-link" href="https://github.com/mystic-HQ">GitHub</a></div>
+<div class="project-card">
+<h3>No Rain Particles</h3>
+<p>Performance-focused mod removing unnecessary rain particle effects for smoother gameplay.</p>
+<a class="project-link" href="https://github.com/mystic-HQ/NoRainParticles">GitHub</a>
+</div>
+
+<div class="project-card">
+<h3>Better Cruiser Sync</h3>
+<p>Networking improvement mod designed to reduce desync issues in multiplayer environments.</p>
+<a class="project-link" href="https://github.com/mystic-HQ/BetterCruiserSync">GitHub</a>
+</div>
 </div>
 </section>
 
@@ -360,10 +384,11 @@ My understanding of programming allows me to communicate efficiently with develo
 <script>
 // particles
 const p=document.getElementById("particles");
-for(let i=0;i<35;i++){
+for(let i=0;i<40;i++){
 const s=document.createElement("span");
 s.style.left=Math.random()*100+"%";
-s.style.animationDuration=12+Math.random()*18+"s";
+s.style.animationDuration=18+Math.random()*25+"s";
+s.style.width=s.style.height=Math.random()>0.7?"3px":"2px";
 p.appendChild(s);
 }
 
@@ -375,7 +400,7 @@ document.querySelectorAll(".project-tabs button").forEach(b=>b.classList.remove(
 btn.classList.add("active");
 }
 
-// language toggle (optional / expandable)
+// language toggle
 let fr=false;
 const dict={
 subtitle:["Developer & Game Tester","Développeur & Testeur de jeux"],
@@ -385,7 +410,7 @@ desc:[
 ],
 aboutText:[
 "I am a developer and game tester focused on playtesting, bug reporting, and gameplay feedback. My understanding of programming allows me to communicate efficiently with developers and provide actionable insights.",
-"Je suis développeur et testeur de jeux, spécialisé dans le playtesting, les rapports de bugs et les retours de gameplay. Ma compréhension de la programmation me permet de communiquer efficacement avec les développeurs."
+"Je suis développeur et testeur de jeux, spécialisé dans le playtesting, les rapports de bugs et les retours de gameplay."
 ]
 };
 
