--- a/index.html
+++ b/index.html
@@ -10,105 +10,108 @@
 
 body{
 font-family:Inter,system-ui,sans-serif;
-background:#0a0a0a;
+background:#05060a;
 color:#fff;
 overflow-x:hidden;
 }
 
-/* ===== BACKGROUND ===== */
-.bg-animation{
+/* ================= BACKGROUND CORE ================= */
+.bg{
 position:fixed;
 inset:0;
-z-index:-1;
-background:linear-gradient(120deg,#0a0a0a,#0f1220,#0a0a0a);
-background-size:400% 400%;
-animation:bgFlow 22s ease infinite;
+z-index:-3;
+background:radial-gradient(circle at top,#0c1224,#05060a 60%);
+overflow:hidden;
 }
 
-@keyframes bgFlow{
-0%{background-position:0% 50%}
-50%{background-position:100% 50%}
-100%{background-position:0% 50%}
-}
-
-/* ===== NEBULA LAYERS ===== */
-.nebula{
+/* ===== AURORA WAVES ===== */
+.aurora{
 position:absolute;
-width:600px;
-height:600px;
+width:200%;
+height:200%;
+top:-50%;
+left:-50%;
+background:
+linear-gradient(120deg,
+rgba(0,255,255,.12),
+rgba(140,0,255,.12),
+rgba(0,150,255,.12),
+rgba(0,255,180,.08)
+);
+filter:blur(120px);
+animation:auroraMove 25s linear infinite;
+transform-origin:center;
+}
+
+.aurora.second{
+animation-duration:35s;
+animation-direction:reverse;
+opacity:.6;
+}
+
+@keyframes auroraMove{
+0%{transform:rotate(0deg) translateY(0)}
+50%{transform:rotate(180deg) translateY(-8%)}
+100%{transform:rotate(360deg) translateY(0)}
+}
+
+/* ===== SLOW PARALLAX GLOW ===== */
+.glow{
+position:absolute;
+width:500px;
+height:500px;
 border-radius:50%;
-filter:blur(140px);
+filter:blur(160px);
 opacity:.35;
-animation:nebulaFloat 40s ease-in-out infinite;
+animation:glowDrift 18s ease-in-out infinite alternate;
 }
 
-.nebula-1{
-background:#00ffff;
-top:10%;
-left:5%;
-animation-duration:45s;
+.glow.cyan{background:#00ffff;top:10%;left:10%}
+.glow.purple{background:#9a5cff;bottom:10%;right:15%}
+.glow.blue{background:#3a7bff;top:55%;left:55%}
+
+@keyframes glowDrift{
+from{transform:translate(0,0)}
+to{transform:translate(120px,-100px)}
 }
 
-.nebula-2{
-background:#ff00ff;
-bottom:10%;
-right:10%;
-animation-duration:50s;
-}
-
-.nebula-3{
-background:#6a5cff;
-top:50%;
-left:40%;
-animation-duration:55s;
-}
-
-@keyframes nebulaFloat{
-0%{transform:translate(0,0)}
-25%{transform:translate(120px,-80px)}
-50%{transform:translate(-100px,60px)}
-75%{transform:translate(80px,120px)}
-100%{transform:translate(0,0)}
-}
-
-/* ===== GRAIN (INLINE SVG, FREE) ===== */
+/* ===== GRAIN (FREE INLINE SVG) ===== */
 body::after{
 content:"";
 position:fixed;
 inset:0;
-background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.8' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='120' height='120' filter='url(%23n)' opacity='.035'/%3E%3C/svg%3E");
+background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.9' numOctaves='4'/%3E%3C/filter%3E%3Crect width='120' height='120' filter='url(%23n)' opacity='.03'/%3E%3C/svg%3E");
 pointer-events:none;
-z-index:0;
+z-index:-1;
 }
 
 /* ===== PARTICLES ===== */
 .particles span{
 position:absolute;
 width:2px;height:2px;
-background:rgba(255,255,255,.7);
+background:rgba(255,255,255,.8);
 border-radius:50%;
-opacity:.5;
-animation:particleDrift linear infinite;
+opacity:.6;
+animation:particle linear infinite;
 }
 
-@keyframes particleDrift{
-from{transform:translateY(120vh) translateX(0)}
-to{transform:translateY(-20vh) translateX(120px)}
+@keyframes particle{
+from{transform:translateY(110vh)}
+to{transform:translateY(-10vh)}
 }
 
-/* ===== LANGUAGE BUTTON ===== */
+/* ================= UI ================= */
 .lang-toggle{
 position:fixed;
 bottom:20px;
 right:20px;
 z-index:200;
-background:rgba(10,10,10,.8);
-border:1px solid #00ffff;
+background:rgba(10,10,20,.7);
+border:1px solid #5ddcff;
 color:#fff;
 padding:8px 14px;
 border-radius:20px;
 cursor:pointer;
-font-size:.9em;
 backdrop-filter:blur(6px);
 }
 
@@ -116,10 +119,10 @@ backdrop-filter:blur(6px);
 nav{
 position:fixed;
 top:0;width:100%;
-background:rgba(10,10,10,.7);
-backdrop-filter:blur(10px);
+background:rgba(5,6,10,.65);
+backdrop-filter:blur(12px);
 z-index:100;
-border-bottom:1px solid rgba(0,255,255,.15);
+border-bottom:1px solid rgba(255,255,255,.08);
 }
 
 nav .container{
@@ -132,9 +135,9 @@ align-items:center;
 }
 
 .logo{
-font-weight:800;
+font-weight:900;
 font-size:1.4em;
-background:linear-gradient(135deg,#00ffff,#ff00ff);
+background:linear-gradient(135deg,#00ffff,#9a5cff);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
@@ -142,14 +145,16 @@ background:linear-gradient(135deg,#00ffff,#ff00ff);
 .nav-links{display:flex;gap:30px}
 .nav-links a{color:#fff;text-decoration:none;position:relative}
 .nav-links a::after{
-content:"";position:absolute;bottom:-5px;left:0;
+content:"";
+position:absolute;
+bottom:-5px;left:0;
 width:0;height:2px;
-background:linear-gradient(90deg,#00ffff,#ff00ff);
+background:linear-gradient(90deg,#00ffff,#9a5cff);
 transition:.3s;
 }
 .nav-links a:hover::after{width:100%}
 
-/* ===== HERO ===== */
+/* ================= HERO ================= */
 .hero{
 min-height:100vh;
 display:flex;
@@ -162,25 +167,28 @@ padding:0 20px;
 .hero h1{
 font-size:4.5em;
 font-weight:900;
-background:linear-gradient(135deg,#00ffff,#ff00ff,#00ffff);
-background-size:200%;
+background:linear-gradient(135deg,#00ffff,#9a5cff,#3a7bff);
+background-size:300%;
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
-animation:shimmer 3s linear infinite;
+animation:textFlow 6s linear infinite;
 }
 
-@keyframes shimmer{to{background-position:200%}}
+@keyframes textFlow{
+to{background-position:300%}
+}
 
 .subtitle{font-size:1.6em;color:#ccc;margin:20px 0}
-.description{max-width:700px;margin:auto;color:#aaa;line-height:1.6}
+.description{max-width:720px;margin:auto;color:#aaa;line-height:1.7}
 
-/* ===== SECTIONS ===== */
+/* ================= SECTIONS ================= */
 section{padding:100px 20px;max-width:1400px;margin:auto}
+
 h2{
 text-align:center;
 font-size:2.8em;
 margin-bottom:60px;
-background:linear-gradient(135deg,#00ffff,#ff00ff);
+background:linear-gradient(135deg,#5ddcff,#9a5cff);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
@@ -188,18 +196,21 @@ background:linear-gradient(135deg,#00ffff,#ff00ff);
 /* ===== SKILLS ===== */
 .skills-grid{
 display:grid;
-grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
 gap:30px;
 }
+
 .skill-card{
-padding:30px;border-radius:20px;
+padding:30px;
+border-radius:20px;
 background:rgba(255,255,255,.04);
-border:1px solid rgba(0,255,255,.2);
+border:1px solid rgba(255,255,255,.12);
 transition:.4s;
 }
+
 .skill-card:hover{
 transform:translateY(-8px);
-box-shadow:0 20px 50px rgba(0,255,255,.25);
+box-shadow:0 20px 40px rgba(90,160,255,.25);
 }
 
 /* ===== PROJECTS ===== */
@@ -209,17 +220,19 @@ justify-content:center;
 gap:20px;
 margin-bottom:40px;
 }
+
 .project-tabs button{
 padding:10px 26px;
 border-radius:30px;
-border:1px solid #00ffff;
+border:1px solid #5ddcff;
 background:none;
 color:#fff;
 cursor:pointer;
 transition:.3s;
 }
+
 .project-tabs button.active{
-background:linear-gradient(135deg,#00ffff,#ff00ff);
+background:linear-gradient(135deg,#5ddcff,#9a5cff);
 color:#000;
 }
 
@@ -233,12 +246,13 @@ gap:30px;
 padding:30px;
 border-radius:20px;
 background:rgba(255,255,255,.04);
-border:1px solid rgba(255,0,255,.3);
+border:1px solid rgba(255,255,255,.15);
 transition:.4s;
 }
+
 .project-card:hover{
 transform:translateY(-10px);
-box-shadow:0 20px 50px rgba(255,0,255,.3);
+box-shadow:0 20px 50px rgba(150,100,255,.3);
 }
 
 .project-card p{color:#aaa;margin-top:10px}
@@ -248,7 +262,7 @@ display:inline-block;
 margin-top:15px;
 padding:8px 22px;
 border-radius:20px;
-background:linear-gradient(135deg,#ff00ff,#00ffff);
+background:linear-gradient(135deg,#9a5cff,#5ddcff);
 color:#000;
 text-decoration:none;
 font-weight:600;
@@ -261,8 +275,9 @@ grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
 gap:30px;
 text-align:center;
 }
+
 .contact p{color:#aaa}
-.contact a{color:#00ffff;text-decoration:none}
+.contact a{color:#5ddcff;text-decoration:none}
 
 /* ===== RESPONSIVE ===== */
 @media(max-width:768px){
@@ -274,10 +289,12 @@ text-align:center;
 
 <body>
 
-<div class="bg-animation">
-  <div class="nebula nebula-1"></div>
-  <div class="nebula nebula-2"></div>
-  <div class="nebula nebula-3"></div>
+<div class="bg">
+  <div class="aurora"></div>
+  <div class="aurora second"></div>
+  <div class="glow cyan"></div>
+  <div class="glow purple"></div>
+  <div class="glow blue"></div>
   <div class="particles" id="particles"></div>
 </div>
 
@@ -300,7 +317,7 @@ text-align:center;
 <h1>Mystic</h1>
 <div class="subtitle" data-i18n="subtitle">Developer & Game Tester</div>
 <p class="description" data-i18n="desc">
-Developer and game tester creating mods, tools, and providing structured playtesting feedback.
+Developer and game tester providing structured playtesting, bug reports, and gameplay feedback.
 </p>
 </div>
 </section>
@@ -309,18 +326,18 @@ Developer and game tester creating mods, tools, and providing structured playtes
 <h2 data-i18n="about">About</h2>
 <p class="description" data-i18n="aboutText">
 I am a developer and game tester focused on playtesting, bug reporting, and gameplay feedback.
-My understanding of programming allows me to communicate efficiently with developers and provide actionable insights.
+My technical knowledge allows clear communication with developers and actionable testing results.
 </p>
 </section>
 
 <section id="skills">
 <h2 data-i18n="skills">Skills</h2>
 <div class="skills-grid">
-<div class="skill-card"><h3>Game Testing</h3><p>Playtesting, bug reports, balance feedback, performance testing</p></div>
-<div class="skill-card"><h3>Mod Development</h3><p>Game modding, scripting, gameplay improvements</p></div>
-<div class="skill-card"><h3>Python</h3><p>Basics</p></div>
-<div class="skill-card"><h3>AutoHotkey</h3><p>Basics</p></div>
-<div class="skill-card"><h3>3D Modelling</h3><p>Basics</p></div>
+<div class="skill-card"><h3 data-i18n="gt">Game Testing</h3><p data-i18n="gtDesc">Playtesting, QA reports, balance feedback</p></div>
+<div class="skill-card"><h3 data-i18n="md">Mod Development</h3><p data-i18n="mdDesc">Gameplay mods, scripting improvements</p></div>
+<div class="skill-card"><h3>Python</h3><p data-i18n="basic">Basics</p></div>
+<div class="skill-card"><h3>AutoHotkey</h3><p data-i18n="basic">Basics</p></div>
+<div class="skill-card"><h3>3D Modelling</h3><p data-i18n="basic">Basics</p></div>
 </div>
 </section>
 
@@ -328,40 +345,50 @@ My understanding of programming allows me to communicate efficiently with develo
 <h2 data-i18n="projects">Projects</h2>
 
 <div class="project-tabs">
-<button class="active" onclick="showProjects('testing', this)">Game Testing</button>
-<button onclick="showProjects('mods', this)">Mods</button>
+<button class="active" onclick="showProjects('testing', this)" data-i18n="testing">Game Testing</button>
+<button onclick="showProjects('mods', this)" data-i18n="mods">Mods</button>
 </div>
 
 <div class="projects-grid" id="testing">
 <div class="project-card">
-<h3>Playtesting Project #1</h3>
-<p>Multiplayer-focused testing with emphasis on balance, progression flow, and bug reproduction.</p>
+<h3>Abyss</h3>
+<p data-i18n="abyss">
+Roblox game by Deep Spirit Games focused on catching fishes underwater with a harpoon.
+</p>
 <a class="project-link" href="https://discord.gg/deepspiritgames">View</a>
 </div>
 
 <div class="project-card">
-<h3>Playtesting Project #2</h3>
-<p>Early-access testing providing structured reports on mechanics clarity and UX consistency.</p>
+<h3>Solvo</h3>
+<p data-i18n="solvo">
+Roblox multiplayer survival game centered around evading a killer.
+</p>
 <a class="project-link" href="https://discord.gg/ryfqDSYGMX">View</a>
 </div>
 
 <div class="project-card">
-<h3>Playtesting Project #3</h3>
-<p>Stress testing, performance benchmarking, and gameplay feedback during active development.</p>
-<a class="project-link" href="#">View</a>
+<h3>QA Central</h3>
+<p data-i18n="qac">
+Multiple playtested games through QA Central, a hub for developers seeking testers.
+</p>
+<a class="project-link" href="https://discord.gg/qac">View</a>
 </div>
 </div>
 
 <div class="projects-grid" id="mods" style="display:none">
 <div class="project-card">
 <h3>No Rain Particles</h3>
-<p>Performance-focused mod removing unnecessary rain particle effects for smoother gameplay.</p>
+<p data-i18n="nrp">
+Lethal Company performance mod removing rain particle effects.
+</p>
 <a class="project-link" href="https://github.com/mystic-HQ/NoRainParticles">GitHub</a>
 </div>
 
 <div class="project-card">
 <h3>Better Cruiser Sync</h3>
-<p>Networking improvement mod designed to reduce desync issues in multiplayer environments.</p>
+<p data-i18n="bcs">
+Networking mod designed to reduce multiplayer desynchronization.
+</p>
 <a class="project-link" href="https://github.com/mystic-HQ/BetterCruiserSync">GitHub</a>
 </div>
 </div>
@@ -371,7 +398,7 @@ My understanding of programming allows me to communicate efficiently with develo
 <h2 data-i18n="contact">Contact</h2>
 <div class="contact">
 <div>
-<p>Email</p>
+<p data-i18n="email">Email</p>
 <a href="mailto:mysticlchq@gmail.com">mysticlchq@gmail.com</a>
 </div>
 <div>
@@ -382,17 +409,16 @@ My understanding of programming allows me to communicate efficiently with develo
 </section>
 
 <script>
-// particles
+/* particles */
 const p=document.getElementById("particles");
-for(let i=0;i<40;i++){
+for(let i=0;i<50;i++){
 const s=document.createElement("span");
 s.style.left=Math.random()*100+"%";
-s.style.animationDuration=18+Math.random()*25+"s";
-s.style.width=s.style.height=Math.random()>0.7?"3px":"2px";
+s.style.animationDuration=15+Math.random()*20+"s";
 p.appendChild(s);
 }
 
-// project switch
+/* project switch */
 function showProjects(type,btn){
 document.getElementById("testing").style.display=type==="testing"?"grid":"none";
 document.getElementById("mods").style.display=type==="mods"?"grid":"none";
@@ -400,18 +426,50 @@ document.querySelectorAll(".project-tabs button").forEach(b=>b.classList.remove(
 btn.classList.add("active");
 }
 
-// language toggle
+/* language */
 let fr=false;
 const dict={
+about:["About","À propos"],
+skills:["Skills","Compétences"],
+projects:["Projects","Projets"],
+contact:["Contact","Contact"],
 subtitle:["Developer & Game Tester","Développeur & Testeur de jeux"],
 desc:[
-"Developer and game tester creating mods, tools, and providing structured playtesting feedback.",
-"Développeur et testeur de jeux créant des mods, outils et des retours de playtesting structurés."
+"Developer and game tester providing structured playtesting, bug reports, and gameplay feedback.",
+"Développeur et testeur de jeux fournissant des playtests structurés, rapports de bugs et retours de gameplay."
 ],
 aboutText:[
-"I am a developer and game tester focused on playtesting, bug reporting, and gameplay feedback. My understanding of programming allows me to communicate efficiently with developers and provide actionable insights.",
-"Je suis développeur et testeur de jeux, spécialisé dans le playtesting, les rapports de bugs et les retours de gameplay."
-]
+"I am a developer and game tester focused on playtesting, bug reporting, and gameplay feedback. My technical knowledge allows clear communication with developers and actionable testing results.",
+"Je suis développeur et testeur de jeux, spécialisé dans le playtesting, les rapports de bugs et les retours de gameplay. Mes connaissances techniques permettent une communication claire avec les développeurs."
+],
+testing:["Game Testing","Tests de jeux"],
+mods:["Mods","Mods"],
+gt:["Game Testing","Tests de jeux"],
+gtDesc:["Playtesting, QA reports, balance feedback","Playtesting, rapports QA, équilibrage"],
+md:["Mod Development","Développement de mods"],
+mdDesc:["Gameplay mods, scripting improvements","Mods de gameplay, améliorations de scripts"],
+basic:["Basics","Bases"],
+abyss:[
+"Roblox game by Deep Spirit Games focused on underwater exploration and harpoon-based fishing.",
+"Jeu Roblox de Deep Spirit Games axé sur l’exploration sous-marine et la pêche au harpon."
+],
+solvo:[
+"Roblox multiplayer survival game centered around evading a killer.",
+"Jeu Roblox multijoueur de survie centré sur la fuite d’un tueur."
+],
+qac:[
+"Multiple playtested games through QA Central, a hub for developers seeking testers.",
+"Plusieurs jeux testés via QA Central, une plateforme pour développeurs recherchant des testeurs."
+],
+nrp:[
+"Lethal Company performance mod removing rain particle effects.",
+"Mod de performance pour Lethal Company supprimant les particules de pluie."
+],
+bcs:[
+"Networking mod designed to reduce multiplayer desynchronization.",
+"Mod réseau visant à réduire les problèmes de désynchronisation multijoueur."
+],
+email:["Email","Email"]
 };
 
 function toggleLang(){
