--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ Developer and game tester providing structured playtesting, bug reports, and gam
 <h2 data-i18n="about">About</h2>
 <p class="description" data-i18n="aboutText">
 I am a developer and game tester focused on playtesting, bug reporting, and gameplay feedback.
-My technical knowledge allows clear communication with developers and actionable testing results.
+My technical knowledge allows me to read code, understand it, and thus help other developpers through playtesting, whether I have access to the code or not.
 </p>
 </section>
 
@@ -387,7 +387,7 @@ Lethal Company performance mod removing rain particle effects.
 <div class="project-card">
 <h3>Better Cruiser Sync</h3>
 <p data-i18n="bcs">
-Networking mod designed to reduce multiplayer desynchronization.
+Lethal Company mod that syncs the cruiser between players.
 </p>
 <a class="project-link" href="https://github.com/mystic-HQ/BetterCruiserSync">GitHub</a>
 </div>
@@ -440,18 +440,18 @@ desc:[
 ],
 aboutText:[
 "I am a developer and game tester focused on playtesting, bug reporting, and gameplay feedback. My technical knowledge allows clear communication with developers and actionable testing results.",
-"Je suis développeur et testeur de jeux, spécialisé dans le playtesting, les rapports de bugs et les retours de gameplay. Mes connaissances techniques permettent une communication claire avec les développeurs."
+"Je suis développeur et testeur de jeux, spécialisé dans le playtesting, les rapports de bugs et les retours de gameplay. Mes connaissances me permettent de lire et comprendre du code, afin de pouvoir aider d'autres développeurs lors de Playtesting, sans avoir forcément besoin du code."
 ],
 testing:["Game Testing","Tests de jeux"],
 mods:["Mods","Mods"],
 gt:["Game Testing","Tests de jeux"],
 gtDesc:["Playtesting, QA reports, balance feedback","Playtesting, rapports QA, équilibrage"],
 md:["Mod Development","Développement de mods"],
-mdDesc:["Gameplay mods, scripting improvements","Mods de gameplay, améliorations de scripts"],
+mdDesc:["Gameplay mods, Behavior changes","Mods de gameplay, changement de comportement"],
 basic:["Basics","Bases"],
 abyss:[
-"Roblox game by Deep Spirit Games focused on underwater exploration and harpoon-based fishing.",
-"Jeu Roblox de Deep Spirit Games axé sur l’exploration sous-marine et la pêche au harpon."
+"Roblox game by Deep Spirit Games focused on catching fishes underwater with a harpoon.",
+"Jeu Roblox de Deep Spirit Games axé sur la pêche sous-marine avec un harpon."
 ],
 solvo:[
 "Roblox multiplayer survival game centered around evading a killer.",
@@ -466,8 +466,8 @@ nrp:[
 "Mod de performance pour Lethal Company supprimant les particules de pluie."
 ],
 bcs:[
-"Networking mod designed to reduce multiplayer desynchronization.",
-"Mod réseau visant à réduire les problèmes de désynchronisation multijoueur."
+"Lethal Company mod that syncs the cruiser between players.",
+"Mod de synchronisation du camion entre les joueurs sur Lethal Company."
 ],
 email:["Email","Email"]
 };
