--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ text-align:center;
 <h1>Mystic</h1>
 <div class="subtitle" data-i18n="subtitle">Developer & Game Tester</div>
 <p class="description" data-i18n="desc">
-Developer and game tester providing structured playtesting, bug reports, and gameplay feedback.
+French developer and game tester providing structured playtesting, bug reports, and gameplay feedback.
 </p>
 </div>
 </section>
@@ -444,11 +444,11 @@ projects:["Projects","Projets"],
 contact:["Contact","Contact"],
 subtitle:["Developer & Game Tester","Développeur & Testeur de jeux"],
 desc:[
-"Developer and game tester providing structured playtesting, bug reports, and gameplay feedback.",
-"Développeur et testeur de jeux fournissant des playtests structurés, rapports de bugs et retours de gameplay."
+"French developer and game tester providing structured playtesting, bug reports, and gameplay feedback.",
+"Développeur français et testeur de jeux fournissant des playtests structurés, rapports de bugs et retours de gameplay."
 ],
 aboutText:[
-"I am a developer and game tester focused on playtesting, bug reporting, and gameplay feedback. My technical knowledge allows clear communication with developers and actionable testing results.",
+"My technical knowledge allows me to read code, understand it, and thus help other developpers through playtesting, whether I have access to the code or not.",
 "Je suis développeur et testeur de jeux, spécialisé dans le playtesting, les rapports de bugs et les retours de gameplay. Mes connaissances me permettent de lire et comprendre du code, afin de pouvoir aider d'autres développeurs lors de Playtesting, sans avoir forcément besoin du code."
 ],
 testing:["Game Testing","Tests de jeux"],
